--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="container">
       <div class="card">
-        <div class="card-image"><img src="images/image-qr-code.png" /></div>
+        <img src="images/image-qr-code.png" />
         <div class="card-content">
           <div class="card-title">
             <h3>Improve your front-end skills by building projects</h3>
@@ -31,7 +30,6 @@
           </div>
         </div>
       </div>
-    </div>
     
   </body>
 </html>
